# parspark-qt

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  ParsPark_fa_IR.ts  README.md  config.hpp  main.cpp  qml.qrc
lib/odb/odb/: CMakeLists.txt
lib/odb/odb-mysql/: CMakeLists.txt
lib/odb/odb-mysql/odb/mysql/: binding.hxx  mysql-types.hxx
lib/odb/odb/odb/details/: config.h  export.hxx
lib/qzint/: CMakeLists.txt
lib/zint/: CMakeLists.txt
libs/odb/libodb/: CMakeLists.txt
src/anar/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README
src/anar/common/: CMakeLists.txt
src/anar/common/include/anar/: a-from-json-visitor.hpp  a-jsonable.hpp  a-to-json-visitor.hpp  binary.hpp  common-controller.hpp  config.hpp.in  constant-model.hpp  controller.hpp  database-const.hpp  database-factory.hpp  database-model.hpp  error-const.hpp  error-manager.hpp  error-model.hpp  exception.hpp  i-database.hpp  i-model-binding-visitor.hpp  i-visitor.hpp  json-parser.hpp  model.hpp  mysql-database.hpp  printer.hpp  s-database.hpp  serial-port.hpp  service.hpp  (+1 more)
src/anar/common/src/: a-from-json-visitor.cpp  a-jsonable.cpp  a-to-json-visitor.cpp  binary.cpp  common-controller.cpp  controller.cpp  database-factory.cpp  error-manager.cpp  exception.cpp  i-database.cpp  i-visitor.cpp  json-parser.cpp  mysql-database.cpp  printer.cpp  s-database.cpp  serial-port.cpp  service.cpp  string.cpp
src/anar/common/test/: CMakeLists.txt  main.cpp
src/anar/const/: CMakeLists.txt  database-const.hpp  error-const.hpp
src/anar/controller/: CMakeLists.txt  common-controller.cpp  common-controller.hpp  controller.hpp
src/anar/database/: CMakeLists.txt  database-factory.cpp  database-factory.hpp  i-database.cpp  i-database.hpp  s-database.cpp
src/anar/database/mysql/: mysql-database.cpp  mysql-database.hpp
src/anar/exception/: CMakeLists.txt
src/anar/interface/: CMakeLists.txt  a-jsonable.cpp  a-jsonable.hpp
src/anar/log/: CMakeLists.txt
src/anar/model/: CMakeLists.txt  constant-model.hpp  database-model.hpp  error-model.hpp  model.hpp
src/anar/service/: CMakeLists.txt  binary.cpp  binary.hpp  printer.cpp  serial-port.cpp  serial-port.hpp  service.cpp  service.hpp  string.cpp  string.hpp
src/anar/task/: CMakeLists.txt
src/app/pars-park-app/: CHANGELOG  CMakeLists.txt  CONTRIBUTORS  README.md  components  config.hpp.in  main.cpp  nazari-test.cpp  nazari-test.hpp
src/app/pars-park-app/const/: settings-const.hpp  view-const.hpp
src/app/pars-park-app/controller/: login-controller.cpp  login-controller.hpp  settings-controller.cpp  settings-controller.hpp
src/app/pars-park-app/interface/: i-pars-park-model-binding-visitor.hpp
src/app/pars-park-app/model/: black-list-model.hpp  car-model.hpp  card-model.hpp  contact-model.hpp  create-modify-delete-model.hpp  driver-model.hpp  login-model.hpp  login.hpp  lost-card-model.hpp  organization-model.hpp  parking-log-model.hpp  pars-park-model.hpp  person-model.hpp  subscription-model.hpp  traffic.hpp  user-model.hpp  user.hpp
src/app/pars-park-app/service/: qt-std-converter.cpp  qt-std-converter.hpp  s-settings.cpp  s-settings.hpp
src/app/pars-park-app/view/: common-view.cpp  common-view.hpp  s-view.cpp  s-view.hpp  view.cpp  view.hpp
src/control/: CMakeLists.txt  base-controller.cpp  base-controller.hpp  login-controller.cpp  login-controller.hpp  settings-controller.cpp  settings-controller.hpp
src/control/common/: CMakeLists.txt
src/model/: CMakeLists.txt  base-model.cpp  base-model.hpp  error.cpp  error.hpp  jsonable.cpp  jsonable.hpp  login.cpp  login.hpp  model.cpp  model.hpp  stringable.cpp  stringable.hpp  traffic.cpp  traffic.hpp  user.cpp  user.hpp
src/model/database/: black-list-model-odb.cxx  black-list-model-odb.hxx  black-list-model-odb.ixx  black-list-model.hxx  black-list-model.sql  car-model-odb.hxx  car-model.hxx  card-model-odb.hxx  card-model.hxx  card-model.sql  contact-model-odb.cxx  contact-model-odb.hxx  contact-model-odb.ixx  contact-model.hxx  contact-model.sql  create-modify-delete-model-odb.cxx  create-modify-delete-model-odb.hxx  create-modify-delete-model-odb.ixx  create-modify-delete-model.hxx  driver-model-odb.hxx  driver-model.hxx  lost-card-model-odb.hxx  lost-card-model.hxx  organization-model-odb.hxx  organization-model-odb.ixx  organization-model.hxx  organization-model.sql  parking-log-model-odb.cxx  parking-log-model-odb.hxx  parking-log-model.hxx  person-model-odb.hxx  person-model.hxx  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.hxx  subscription-model-odb.hxx  subscription-model.hxx  user-model-odb.cxx  user-model-odb.hxx  (+3 more)
src/model/database/traits/: traits-mysql.hxx
src/model/settings/: CMakeLists.txt  alpr.cpp  alpr.hpp  board.cpp  board.hpp  camera.cpp  camera.hpp  card-reader.cpp  card-reader.hpp  comport.cpp  comport.hpp  database.cpp  database.hpp  gate.cpp  gate.hpp  parking.cpp  parking.hpp  payment.cpp  payment.hpp  printer.cpp  printer.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  software.cpp  software.hpp
src/service/: CMakeLists.txt  base-service.cpp  base-service.hpp  printer.cpp  printer.hpp  qt-std-converter.cpp  qt-std-converter.hpp  s-settings.cpp  s-settings.hpp  serial-port.cpp  serial-port.hpp
src/view/: CMakeLists.txt  base-view.cpp  base-view.hpp  common-view.cpp  common-view.hpp  s-view.hpp  view.cpp  view.hpp
src/view/common/: CommonButton.qml  CommonCOMPort.qml  CommonComboBox.qml  CommonDateAndTime.qml  CommonDetailsTable.qml  CommonNumericComboBox.qml  CommonParkingCapacity.qml  CommonPicture.qml  CommonPlate.qml  CommonServer.qml  CommonSpinBox.qml  CommonStatus.qml  CommonTextField.qml
src/view/login/: login-view.cpp  login-view.hpp  login.qml
src/view/main/: MainColumnLayout.qml  MainEnterSection.qml  MainExitSection.qml  MainMiddelSection.qml  MainMiddleSection.qml  main.qml
src/view/settings/: ALPRTab.qml  BoardTab.qml  CameraTab.qml  CardReaderTab.qml  DataBaseTab.qml  GateTab.qml  ParkingInfoTab.qml  PaymentTab.qml  PrinterTab.qml  SoftwareTab.qml  settings-view.cpp  settings-view.hpp  settings.qml
(+327 files in other folders)
