cmake_minimum_required(VERSION 3.5)

project(Anar)

file(STRINGS "${PROJECT_SOURCE_DIR}/libversion" SHARED_LIBRARY_VERSION)
# Read the version information from the VERSION file
file(STRINGS "${PROJECT_SOURCE_DIR}/VERSION" PACKAGE_VERSION)
string(REGEX REPLACE "([0-9]+)\\.[0-9]+\\.[0-9]+\\.[0-9]+.*" "\\1" ANAR_PRODUCT_VERSION_MAJOR ${PACKAGE_VERSION})
string(REGEX REPLACE "[0-9]+\\.([0-9]+)\\.[0-9]+\\.[0-9]+.*" "\\1" ANAR_PRODUCT_VERSION_MINOR ${PACKAGE_VERSION})
string(REGEX REPLACE "[0-9]+\\.[0-9]+\\.([0-9]+)\\.[0-9]+.*" "\\1" ANAR_PRODUCT_VERSION_PATCH ${PACKAGE_VERSION})
string(REGEX REPLACE "[0-9]+\\.[0-9]+\\.[0-9]+\\.([0-9]+.*)" "\\1" ANAR_PRODUCT_VERSION_REVISION ${PACKAGE_VERSION})

set(ANAT_PRODUCT_PROJECT_VERSION ${ANAR_PRODUCT_VERSION_MAJOR}.${ANAR_PRODUCT_VERSION_MINOR}.${ANAR_PRODUCT_VERSION_PATCH}.${ANAR_PRODUCT_VERSION_REVISION})
set(ANAR_PRODUCT_COMPANY_NAME "Anshan Rayanesh")
set(ANAR_PRODUCT_ICON "${CMAKE_SOURCE_DIR}/image/icon/dll.ico")

add_subdirectory(common)