find_package(Qt5 COMPONENTS Core Quick LinguistTools Sql REQUIRED)
add_subdirectory(
   ${CMAKE_SOURCE_DIR}/src/model/settings
   )
set(SOURCES
   ${SOURCES}
   ${CMAKE_SOURCE_DIR}/src/model/user.cpp
   ${CMAKE_SOURCE_DIR}/src/model/login.cpp
   ${CMAKE_SOURCE_DIR}/src/model/base-model.cpp
   ${CMAKE_SOURCE_DIR}/src/model/stringable.cpp
   ${CMAKE_SOURCE_DIR}/src/model/jsonable.cpp
)
add_library(model
   ${SOURCES}
   )
target_link_libraries(model
  PRIVATE
 Qt5::Core
 settings
)
